# bq-guard

./: README.md  pyproject.toml
bq_guard/: __init__.py  app.py  cache.py  config.py  gcloud.py  history.py
bq_guard/bq/: client.py  jobs.py  metadata.py
bq_guard/policy/: __init__.py  checks.py  partition.py  sql_sanitize.py  types.py
bq_guard/ui/: modals.py  panels.py  results.py
tests/: test_partition_enforcement.py  test_policy_checks.py
